--- a/2021.html
+++ b/2021.html
@@ -53,7 +53,7 @@
   </header>
   <main>
     <div class="photo-grid">
-      <img src="image/fam2021.1.jpg" alt="Family Photo 1">
+      <img src="image/fam2021.1.jpg">
       <img src="image/Raya1.jpg" alt="Family Photo 2">
       <img src="image/fam2021.4.jpg" alt="Family Photo 3">
       <img src="image/fam2021.2.jpg" alt="Family Photo 4">
