--- a/hobby.html
+++ b/hobby.html
@@ -119,6 +119,15 @@
             <h2>Singing</h2>
             <p>During a time of self-discovery, music becomes a powerful outlet for feelings, whether it's joy, sadness, or excitement. Singing also lets me explore creativity and individuality while having fun.</p>
             <img src="image/catsing.jpg">
+            <p><b>Achievements & Performances</b></p>
+            <p class="achievement-title">Types of Performances:</p>
+            <ul>
+                <li>School Choir Performances</li>
+                <li>3 Hours Karaoke Session with Friends</li>
+                <li>Camping Night Competition</li>
+                <li>Nasyeed Club</li>
+                <li>Went to a concert</li>
+            </ul>
             
             <!-- Headphone Icon with Link -->
             <div class="icon">
